moved modeling, updated tuning

--- a/modeling/cross-validation.ipynb
+++ b/modeling/cross-validation.ipynb
@@ -10,23 +10,33 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-26T19:08:21.516164Z",
+     "start_time": "2024-04-26T19:08:21.452239Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "from engineering import *\n",
-    "from processing import *\n",
+    "import pandas as pd\n",
+    "from feature_engineering.engineering import *\n",
+    "from feature_engineering.processing import *\n",
     "from joblib import load\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "pipeline_processing = load('pipelines/processing_pipeline.joblib')\n",
-    "pipeline_engineering = load('pipelines/engineering_pipeline.joblib')"
+    "pipeline_processing = load('../feature_engineering/pipelines/processing_pipeline.joblib')\n",
+    "pipeline_engineering = load('../feature_engineering/pipelines/engineering_pipeline.joblib')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-26T19:08:48.682345Z",
+     "start_time": "2024-04-26T19:08:48.607549Z"
+    }
+   },
    "outputs": [],
    "source": [
     "X_train = pd.read_csv('../data/orig_train.csv')\n",
@@ -44,7 +54,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-26T19:08:50.436537Z",
+     "start_time": "2024-04-26T19:08:50.411996Z"
+    }
+   },
    "outputs": [],
    "source": [
     "X_val = pd.read_csv('../data/orig_valid.csv')\n",
@@ -59,7 +74,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-26T19:08:53.777969Z",
+     "start_time": "2024-04-26T19:08:53.526425Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -70,13 +90,18 @@
     "from xgboost import XGBClassifier  \n",
     "from sklearn.svm import SVC\n",
     "\n",
-    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n"
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-26T19:08:56.948767Z",
+     "start_time": "2024-04-26T19:08:56.942941Z"
+    }
+   },
    "outputs": [],
    "source": [
     "models = [RandomForestClassifier(n_estimators=200, min_samples_split=2, min_samples_leaf=1, max_features='sqrt', max_depth=20, random_state=42),\n",
