--- a/feature_engineering/feature_engineering.ipynb
+++ b/feature_engineering/feature_engineering.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2b2abdf8fb6a1a0f",
    "metadata": {
     "ExecuteTime": {
@@ -72,39 +72,16 @@
     "        \n",
     "        return X\n",
     "    \n",
-    "# Imputes missing values with mode and according to distribution of columns\n",
+    "# Imputes missing values with mode for specified columns\n",
     "class MyImputer(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self, cols_mode_imputation, cols_dist_imputation):\n",
+    "    def __init__(self, cols_mode_imputation):\n",
     "        self.modes = {}\n",
     "        self.distributions_of_columns = {}\n",
     "        self.cols_mode_imputation = cols_mode_imputation\n",
-    "        self.cols_dist_imputation = cols_dist_imputation\n",
-    "    \n",
-    "    # Function to create dictionary containing distribution of a categorical column\n",
-    "    def get_col_distribution(self, X, col_name):\n",
-    "        value_counts = X[col_name].value_counts()\n",
-    "        number_of_missing_values = value_counts[\"Missing\"]\n",
-    "        value_counts_dict = value_counts[1:].to_dict()\n",
-    "        \n",
-    "        # change to probabilities\n",
-    "        for key in value_counts_dict:\n",
-    "            value_counts_dict[key] = value_counts_dict[key] / (len(X) - number_of_missing_values)\n",
-    "\n",
-    "        # if probabilites do not sum to 1 due to numerical errors\n",
-    "        if 0.99 < sum(value_counts_dict.values()) < 1:\n",
-    "            max_value = max(value_counts_dict.values())\n",
-    "            max_key = [key for key, value in value_counts_dict.items() if value == max_value][0]\n",
-    "\n",
-    "            value_counts_dict[max_key] += 1 - sum(value_counts_dict.values())\n",
-    "\n",
-    "        return value_counts_dict\n",
     "\n",
     "    def fit(self, X, y=None):\n",
     "        for col_name in self.cols_mode_imputation:\n",
     "            self.modes[col_name] = X[col_name].mode()[0]\n",
-    "        \n",
-    "        for col_name in self.cols_dist_imputation:\n",
-    "            self.distributions_of_columns[col_name] = self.get_col_distribution(X, col_name)\n",
     "        \n",
     "        return self\n",
     "    \n",
@@ -113,13 +90,6 @@
     "        \n",
     "        for col_name in self.cols_mode_imputation:\n",
     "            X_copy[col_name] = X[col_name].replace('Missing', self.modes[col_name])\n",
-    "        \n",
-    "        for col_name in self.cols_dist_imputation:\n",
-    "            column_distribution = self.distributions_of_columns[col_name]\n",
-    "            \n",
-    "            X_copy[col_name] = X[col_name].replace('Missing',\n",
-    "                                              np.random.choice(list(column_distribution.keys()), \n",
-    "                                                        p = list(column_distribution.values())))\n",
     "        \n",
     "        return X_copy\n",
     "\n",
@@ -234,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "48ae2dc8309fec06",
    "metadata": {
     "ExecuteTime": {
@@ -287,7 +257,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "['pipelines/processing_pipeline.joblib']"
+      "text/plain": [
+       "['pipelines/processing_pipeline.joblib']"
+      ]
      },
      "execution_count": 18,
      "metadata": {},
@@ -845,7 +817,10 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[('WORK_SENIORITY_to_BUSINESS_AGE', -0.088),\n ('LENGTH_RELATIONSHIP_WITH_CLIENT_to_AGE', -0.052)]"
+      "text/plain": [
+       "[('WORK_SENIORITY_to_BUSINESS_AGE', -0.088),\n",
+       " ('LENGTH_RELATIONSHIP_WITH_CLIENT_to_AGE', -0.052)]"
+      ]
      },
      "execution_count": 15,
      "metadata": {},
@@ -920,7 +895,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "['pipelines/engineering_pipeline.joblib']"
+      "text/plain": [
+       "['pipelines/engineering_pipeline.joblib']"
+      ]
      },
      "execution_count": 19,
      "metadata": {},
@@ -1306,7 +1283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
